--- a/requirements.txt
+++ b/requirements.txt
@@ -1,108 +1,55 @@
-apturl==0.5.2
 asgiref==3.3.1
-astroid==2.5.3
-bcrypt==3.1.7
-blinker==1.4
-Brlapi==0.7.0
+CacheControl==0.12.6
+cachetools==4.2.1
 certifi==2020.12.5
-cffi==1.14.4
+cffi==1.14.5
 chardet==4.0.0
-Click==7.0
-colorama==0.4.3
-command-not-found==0.3
 coreapi==2.3.3
 coreschema==0.0.4
-cryptography==3.3.1
-cupshelpers==1.0
-dbus-python==1.2.16
-defer==1.0.6
-defusedxml==0.7.0rc2
-distro==1.4.0
-distro-info===0.23ubuntu1
-Django==3.0.5
+cryptography==3.4.7
+defusedxml==0.7.1
+Django==3.1.7
 django-templated-mail==1.1.1
-djangorestframework==3.12.2
+djangorestframework==3.12.4
 djangorestframework-simplejwt==4.6.0
-djongo==1.3.4
 djoser==2.1.0
-dnspython==2.1.0
-duplicity==0.8.12.0
-entrypoints==0.3
-fasteners==0.14.1
-ffmpeg==1.4
-future==0.18.2
-httplib2==0.14.0
+firebase-admin==4.5.3
+google-api-core==1.26.3
+google-api-python-client==2.1.0
+google-auth==1.28.0
+google-auth-httplib2==0.1.0
+google-cloud-core==1.6.0
+google-cloud-firestore==2.1.0
+google-cloud-storage==1.37.0
+google-crc32c==1.1.2
+google-resumable-media==1.2.0
+googleapis-common-protos==1.53.0
+grpcio==1.36.1
+httplib2==0.19.1
 idna==2.10
-isort==5.8.0
 itypes==1.2.0
 Jinja2==2.11.3
-keyring==18.0.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lazy-object-proxy==1.6.0
-lockfile==0.12.2
-louis==3.12.0
-macaroonbakery==1.3.1
-Mako==1.1.0
 MarkupSafe==1.1.1
-mccabe==0.6.1
-monotonic==1.5
-mutagen==1.45.1
-netifaces==0.10.4
-numpy==1.19.5
+msgpack==1.0.2
 oauthlib==3.1.0
-olefile==0.46
-opencv-python==4.5.1.48
-paramiko==2.6.0
-pexpect==4.6.0
-Pillow==8.1.0
-protobuf==3.6.1
-pycairo==1.16.2
+packaging==20.9
+Pillow==8.1.2
+proto-plus==1.18.1
+protobuf==3.15.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.20
-pycups==1.9.73
-pydub==0.24.1
-PyGObject==3.36.0
 PyJWT==2.0.1
-pylint==2.7.4
-pymacaroons==0.13.0
-pymongo==3.11.3
-PyNaCl==1.3.0
-PyQRCode==1.2.1
-pyRFC3339==1.1
-pytesseract==0.3.7
-python-apt==2.0.0+ubuntu0.20.4.4
-python-dateutil==2.7.3
-python-debian===0.1.36ubuntu1
+pyparsing==2.4.7
 python3-openid==3.2.0
-pytz==2020.5
-pyxdg==0.26
-PyYAML==5.3.1
-reportlab==3.5.34
+pytz==2021.1
+qrcode==6.1
 requests==2.25.1
 requests-oauthlib==1.3.0
-requests-unixsocket==0.2.0
-rope==0.18.0
-screen-resolution-extra==0.0.0
-SecretStorage==2.3.1
-simplejson==3.16.0
+rsa==4.7.2
 six==1.15.0
 social-auth-app-django==4.0.0
-social-auth-core==4.0.3
-SpeechRecognition==3.8.1
-sqlparse==0.2.4
-supervisor==4.1.0
-systemd-python==234
-toml==0.10.2
-ubuntu-advantage-tools==20.3
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
+social-auth-core==4.1.0
+sqlparse==0.4.1
 uritemplate==3.0.1
-urllib3==1.26.3
-usb-creator==0.3.7
-wadllib==1.3.3
-Wand==0.5.9
-wrapt==1.12.1
-xkit==0.0.0
+urllib3==1.26.4
