--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ packaging==20.9
 Pillow==8.1.2
 proto-plus==1.18.1
 protobuf==3.15.6
+psycopg2-binary==2.9.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
