added variables from .env file to django containers

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,8 @@ services:
  web_migrate:
   image: web:latest
   command: python manage.py migrate
+  env_file:
+   - .env
   environment:
    DB_HOST: "db"
   depends_on:
@@ -23,6 +25,8 @@ services:
   command: python manage.py runserver 0.0.0.0:8000
   ports:
    - "8000:8000"
+  env_file:
+   - .env
   environment:
    DB_HOST: "db"
    DEBUG: "False"
