--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
 POSTGRES_DB=db
+
 SECRET_KEY=dv7_vg+yan&j+6l8aicz^3#k@#w7dz*fbw%44%*==a#uiboh*4
+
+SMS_AERO_API_KEY=
+SMS_AERO_USERNAME=
