added forgotten requirement freezegun for tests

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ djoser==2.1.0
 factory-boy==3.2.1
 Faker==11.3.0
 firebase-admin==4.5.3
+freezegun==1.2.1
 google-api-core==1.26.3
 google-api-python-client==2.1.0
 google-auth==1.28.0
