--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,34 +1,56 @@
 version: '3'
 services:
- web:
-   build: .
-   image: 'web'
-   volumes:
+  web:
+    build: .
+    image: 'web'
+    volumes:
     - .:/code
- db:
-  image: postgres:12.3
-  env_file:
-   - .env
-  ports:
-   - "5432:5432"
- web_migrate:
-  image: web:latest
-  command: python manage.py migrate
-  env_file:
-   - .env
-  environment:
-   DB_HOST: "db"
-  depends_on:
-   - db
- web_run:
-  image: web:latest
-  command: python manage.py runserver 0.0.0.0:8000
-  ports:
-   - "8000:8000"
-  env_file:
-   - .env
-  environment:
-   DB_HOST: "db"
-   DEBUG: "False"
-  depends_on:
-   - db
+  db:
+    image: postgres:12.3
+    env_file:
+     - .env
+    ports:
+     - "5432:5432"
+  web_migrate:
+    image: web:latest
+    command: python manage.py migrate
+    env_file:
+     - .env
+    environment:
+     DB_HOST: "db"
+    depends_on:
+     - db
+  web_run:
+    image: web:latest
+    command: python manage.py runserver 0.0.0.0:8000
+    ports:
+     - "8000:8000"
+    env_file:
+     - .env
+    environment:
+     DB_HOST: "db"
+     DEBUG: "False"
+    depends_on:
+     - db
+  rabbitmq:
+    image: rabbitmq:3.8.6
+    environment:
+     RABBITMQ_DEFAULT_USER: "rabbitmq"
+     RABBITMQ_DEFAULT_PASS: "rabbitmq"
+     RABBITMQ_DEFAULT_VHOST: "/"
+    ports:
+     - "5672:5672"
+  celery:
+    image: web
+    command: "celery -A server.tasks worker --loglevel=INFO"
+    volumes:
+      - .:/code
+    env_file:
+      - .env
+    environment:
+      - DJANGO_SETTINGS_MODULE=server.settings
+      - CELERY_RABBIT_ADDRESS=amqp://rabbitmq:rabbitmq@rabbitmq//
+      - DB_HOST=db
+    depends_on:
+      - rabbitmq
+      - db
