fix production rabbit host

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,7 @@ services:
     environment:
      DB_HOST: "db"
      DEBUG: "False"
+     CELERY_RABBIT_ADDRESS: "amqp://rabbitmq:rabbitmq@rabbitmq//"
     depends_on:
      - db
   rabbitmq:
