--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,10 @@ coreschema==0.0.4
 cryptography==3.4.7
 defusedxml==0.7.1
 Django==3.1.7
+django-celery-beat==2.2.1
+django-environ==0.9.0
 django-templated-mail==1.1.1
+django-timezone-field==4.2.3
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.6.0
 djoser==2.1.0
@@ -57,6 +60,7 @@ pyasn1-modules==0.2.8
 pycparser==2.20
 PyJWT==2.0.1
 pyparsing==2.4.7
+python-crontab==2.6.0
 python-dateutil==2.8.2
 python3-openid==3.2.0
 pytz==2022.1
@@ -66,7 +70,6 @@ requests-oauthlib==1.3.0
 rsa==4.7.2
 six==1.15.0
 social-auth-app-django==4.0.0
-social-auth-core==4.1.0
 sqlparse==0.4.1
 text-unidecode==1.3
 typing_extensions==4.2.0
