--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 amqp==5.1.1
 asgiref==3.3.1
+attrs==22.1.0
 billiard==3.6.4.0
 CacheControl==0.12.6
 cached-property==1.5.2
@@ -25,6 +26,7 @@ django-timezone-field==4.2.3
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.6.0
 djoser==2.1.0
+drf-spectacular==0.24.2
 factory-boy==3.2.1
 Faker==11.3.0
 firebase-admin==4.5.3
@@ -43,14 +45,18 @@ grpcio==1.36.1
 httplib2==0.19.1
 idna==2.10
 importlib-metadata==1.7.0
+importlib-resources==5.10.0
+inflection==0.5.1
 itypes==1.2.0
 Jinja2==2.11.3
+jsonschema==4.16.0
 kombu==5.2.4
 MarkupSafe==1.1.1
 msgpack==1.0.2
 oauthlib==3.1.0
 packaging==20.9
 Pillow==8.1.2
+pkgutil_resolve_name==1.3.10
 prompt-toolkit==3.0.29
 proto-plus==1.18.1
 protobuf==3.15.6
@@ -60,16 +66,21 @@ pyasn1-modules==0.2.8
 pycparser==2.20
 PyJWT==2.0.1
 pyparsing==2.4.7
+pyrsistent==0.18.1
 python-crontab==2.6.0
 python-dateutil==2.8.2
 python3-openid==3.2.0
 pytz==2022.1
+PyYAML==6.0
 qrcode==6.1
 requests==2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7.2
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.6
 six==1.15.0
 social-auth-app-django==4.0.0
+social-auth-core==4.1.0
 sqlparse==0.4.1
 text-unidecode==1.3
 typing_extensions==4.2.0
