--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -60,3 +60,9 @@ services:
     depends_on:
       - rabbitmq
       - db
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
