--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,7 @@ http {
     server {
         listen 80;
         location /media {
-            root /tigra;
+            root /root/tigra;
         }
         location / {
             proxy_pass http://127.0.0.1:8000;
