--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ coreschema==0.0.4
 cryptography==3.4.7
 defusedxml==0.7.1
 Django==3.1.7
+django-admin-inline-paginator==0.3.0
 django-admin-permissions==1.0.0
 django-celery-beat==2.2.1
 django-environ==0.9.0
