--- a/requirements.in
+++ b/requirements.in
@@ -2,6 +2,7 @@ celery==5.2.7
 Django==3.1.7
 django-admin-inline-paginator==0.3.0
 django-admin-permissions==1.1.0
+django-admin-rangefilter==0.10.0
 django-celery-beat==2.2.1
 django-environ==0.9.0
 django-templated-mail==1.1.1
