--- a/requirements.in
+++ b/requirements.in
@@ -3,6 +3,7 @@ Django==3.1.7
 django-admin-inline-paginator==0.3.0
 django-admin-permissions==1.1.0
 django-admin-rangefilter==0.10.0
+django-object-actions==4.3.0
 django-celery-beat==2.2.1
 django-environ==0.9.0
 django-templated-mail==1.1.1
@@ -18,3 +19,4 @@ psycopg2-binary==2.9.2
 requests==2.25.1
 whitenoise==5.3.0
 Pillow==8.1.2
+xlwt==1.3.0
