--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -39,6 +39,13 @@ services:
      - web_migrate
     volumes:
       - ./media/:/code/media/
+  telegram_bot_run:
+    image: web:latest
+    command: python telegram_client/app.py
+    env_file:
+      - .env
+    depends_on:
+      - db
   rabbitmq:
     image: rabbitmq:3.8.6
     environment:
