--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -44,6 +44,8 @@ services:
     command: python telegram_client/app.py
     env_file:
       - .env
+    volumes:
+      - ./user_data.json:/code/user_data.json
   rabbitmq:
     image: rabbitmq:3.8.6
     environment:
