--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ SECRET_KEY=dv7_vg+yan&j+6l8aicz^3#k@#w7dz*fbw%44%*==a#uiboh*4
 
 SMS_AERO_API_KEY=
 SMS_AERO_USERNAME=
+
+DUMP_BOT_TOKEN=
+DUMP_BOT_CHAT_ID=
