--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,8 @@
-version: '3'
 services:
   web:
-    build: .
+    build:
+      context: .
+      network: host
     image: 'web'
     volumes:
     - .:/code
